fixed a json file

--- a/public/data/mazeVeryEasy.json
+++ b/public/data/mazeVeryEasy.json
@@ -1,6 +1,11 @@
-[
+{
+    "x": 4,
+    "y": 4,
+    "name": "very easy",
+    "maze": [
     ["bt", "t", "tbr", "tr"],
     ["l", "l", "br", "r"],
     ["l", "rb", "b", "r"],
     ["bl", "b", "b", "b"]
-] 
+    ] 
+}
